index.html. Trying to prevent tabs's jumping

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -2958,3 +2958,8 @@ label {
     }
   }
 }
+
+.preventJumping {
+  position: absolute
+  height: 1500px
+}
